[tool.poetry]
name = "images-api"
version = "0.1.0"
description = ""
authors = ["Piotr <piotr.zegarekk@gmail.com>"]
readme = "README.md"
packages = [{include = "images_api"}]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.2"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
