[tool.poetry]
name = "images-api"
version = "0.1.0"
description = ""
authors = ["Piotr <piotr.zegarekk@gmail.com>"]
readme = "README.md"
packages = [{include = "imagesapi"}]
license = "MIT"

[tool.poetry.dependencies]
django = "4.2.6"
djangorestframework = "3.14.0"
django-filter = "23.3"
psycopg2-binary = "2.9.9"
python = "3.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
